# MessagingSystem

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/example_systems/: input_message.hpp  input_system.hpp  output_system.hpp  print_message.hpp  random_message.hpp  random_system.hpp
src/messaging/: message.hpp  message_bus.cpp  message_bus.hpp  message_types.hpp  messaging_system.hpp
